--- a/src/components/visuals.css
+++ b/src/components/visuals.css
@@ -23,10 +23,10 @@
 
 .visuals-chips {
   display: flex;
-  column-gap: 15px;
+  column-gap: 16px;
   margin-left: 1px;
   flex-wrap: wrap;
-  row-gap: 15px;
+  row-gap: 16px;
 }
 
 .visuals-chips button {
@@ -35,9 +35,17 @@
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 600;
+  margin-right: 0;
+  margin-bottom: 0;
   background: none;
   border: 0;
   font-family: 'Inter', sans-serif;
+}
+
+.visuals-chips button:hover {
+  color: var(--white);
+  background-color: var(--mustard);
+  outline: 0px;
 }
 
 .visuals-chips.darkmode button {
@@ -45,15 +53,21 @@
   color: #fefefe;
 }
 
+
 .invis {
   display: none !important;
 }
 
 .visuals-chips .active {
-  background-color: var(--mustard);
+  background-color: var(--lightblack);
   outline: 0px solid transparent;
   border: 0;
   color: #fefefe;
+}
+
+.visuals-chips.darkmode .active {
+  background-color: white;
+  color: var(--lightblack);
 }
 
 @media screen and (max-width: 800px) {
